# UnicomDataProcessor

./: .dockerignore  .env.example  .gitignore  API_README.md  CLAUDE.md  Dockerfile  config.py  docker-compose.yml  main.py  output.html  pyproject.toml  quick_test.py  run_api.py  simple_test.py  start_api.py  table_metadata.json  test_api.py  test_parallel_fix.py  test_similarity.py  uploaded_files(1).json  working_download_urls.txt
.claude/: settings.local.json
agents/: DriverAgent.py  data.json  embeding_tables.py  fileProcessAgent.py  processUserInput.py  table.txt  test_embedding.py
api/: main.py  models.py
api/routers/: database.py  files.py
api/services/: db_service.py  file_service.py
src/: fileProcessAgent.py  mysqlConnector.py  similarity_calculation.py  test.py
temp/: 七田村2025年度党员名册2025.xls  燕云村残疾人补贴申领登记.csv
temp_files/: 燕云村2024年度党员名册.xlsx
utils/: clean_response.py  file_process.py  html_generator.py  message_process.py  modelRelated.py  mysqlConnector.py  process_links.py  retrieve_exsiting_tables.py  screen_shot.py  similarity_calculation.py  table_processing_helpers.py  testing_e2i.py
