[project]
name = "dataprocessor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "mammoth>=1.8.0",
    "mysql>=0.0.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.7.1",
    "uvicorn[standard]>=0.24.0",
    "xlrd>=2.0.2",
    "xlwings>=0.33.15",
]
